# demos

./: .gitignore  Cargo.toml  Makefile  README.md  Xargo.toml  code_of_conduct.md  linker.ld  x86_64-demos.json  x86_64-uefi.json
.cargo/: config
boot/: Cargo.toml
boot/src/: efi.rs  kernel.rs  main.rs
kernel/: Cargo.toml
kernel/src/: klog.rs  main.rs
memory/: Cargo.toml
memory/src/: area_frame_allocator.rs  heap_allocator.rs  lib.rs  stack_allocator.rs
memory/src/paging/: entry.rs  mapper.rs  mod.rs  table.rs  temporary_page.rs
old-src/: macros.rs
old-src/interrupts/: mod.rs
old-src/memory/: heap_allocator.rs
scripts/: make-image
src/: constants.rs  klog.rs  lib.rs  main.rs  serial.rs  vga.rs
src/arch/x86_64/: boot.asm  grub.cfg  linker.ld  long_mode_init.asm  multiboot_header.asm
src/boot/: mod.rs
src/interrupts/: gdt.rs  mod.rs
src/memory/: area_frame_allocator.rs  mod.rs  stack_allocator.rs
src/memory/paging/: entry.rs  mapper.rs  mod.rs  table.rs  temporary_page.rs
