[package]
name = "demos"
version = "0.1.0"
authors = ["Stephen Demos <stephen@demos.zone>"]

[lib]
crate-type = ["dylib"]

[dependencies]
rlibc = "1.0"
volatile = "0.1"
spin = "0.4"
multiboot2 = "0.3"
bitflags = "1.0"
x86_64 = "0.1"
once = "0.3"
bit_field = "0.9"
uefi = { git = "https://github.com/csssuf/rust-uefi" }

[dependencies.lazy_static]
version = "1.0"
features = ["nightly", "spin_no_std"]

[dependencies.log]
version = "0.4"
features = ["max_level_trace", "release_max_level_info"]