[package]
name = "memory"
version = "0.1.0"
authors = ["Stephen Demos <stephen@demos.zone>"]

[dependencies]
# spin = "0.4"
x86_64 = "0.1"
# rlibc = "1.0"
# volatile = "0.1"
multiboot2 = "0.3"
bitflags = "1.0"
once = "0.3"
# bit_field = "0.9"

# [dependencies.lazy_static]
# version = "1.0"
# features = ["nightly", "spin_no_std"]

[dependencies.log]
version = "0.4"
default-features = false
features = ["max_level_trace", "release_max_level_info"]
